--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
                 <li><a href="{{ url_for('login') }}">Log In</a></li>
                 <li><a href="{{ url_for('register') }}">Sign Up</a></li>
             {% endif %}
-                <li><a href="{{ url_for('post_recipe') }}">Post a Recipe</a></li>
+                <li><a href="{{ url_for('post_recipe') }}">All Recipes</a></li>
             {% block extra_nav %}{% endblock %}
         </ul>
     </nav>
