--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h1>Login</h1>
-    <form action="{{ url_for('auth.login') }}" method="post">
+    <form action="{{ url_for('login') }}" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
         <br>
