--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h1>Register</h1>
-    <form action="{{ url_for('auth.register') }}" method="post">
+    <form action="{{ url_for('register') }}" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
         <br>
